@@ -1,5 +1,8 @@
 2002-03-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
+	* Netcomics/Factory.pm (load_RLI_files): Fixed code that tests for
+	file existance when the .rli file doesn't exist when not not
+	separating comics into their own dirs.
 	* lib/alexsrestaurant: moved alex over from nando & updated it for
 	it being in its own website.
 	* lib/nando: removed file.
